# project-harness-bootstrap

./: AGENTS.md  CLAUDE.md  README.md  SKILL.md
agents/: openai.yaml
docs/: AI项目-Harness-一句话启动说明-v1.md  AI项目-Harness-仓库模板规范-v1.md  AI项目-Harness-总设计-v1.md  AI项目-多Agent使用判断-v1.md  Claude-Codex-双配置适配说明-v1.md
docs/plans/: 2026-04-12-template-specialization-design.md  2026-04-12-template-specialization-plan.md  2026-05-11-prompt-optimization-roadmap.md  2026-05-11-提示词优化路线图.md
docs/references/: 2026-05-13-Claude-Design-参考整理.md  2026-05-16-Claude-Design-PDF-对照记录.md
docs/runbooks/: git-sync-and-contribution.md
scripts/: init-ai-harness.mjs  test-init-ai-harness.mjs
templates/base/: AGENTS.md  CLAUDE.md
templates/base/docs/prompts/: 00-提示词索引.md  01-系统级规则.md  05-启动后交互契约.md  10-系统-默认协作流程.md  20-产品-需求深访与PRD.md  30-前端-设计与实现.md  31-前端-设计系统与风格.md  32-前端-页面实现与状态.md  40-后端-接口与数据.md  50-Git-仓库维护.md  60-测试-交互视觉与验收.md  70-协作-远程仓库与Linear.md
templates/base/docs/runbooks/: 02-运维手册.md
templates/base/docs/specs/: 01-项目启动卡.md  02-MVP范围与非目标.md  05-测试与验证策略.md
templates/frontend-fastapi/backend/: pyproject.toml
templates/frontend-fastapi/backend/app/: main.py
templates/frontend-fastapi/backend/app/api/routes/: health.py
templates/frontend-fastapi/backend/app/core/: config.py  logging.py
templates/frontend-fastapi/backend/app/services/: health_service.py
templates/frontend-fastapi/backend/scripts/: bootstrap-env.ps1
templates/frontend-fastapi/backend/tests/: test_health.py
templates/frontend-fastapi/frontend/: README.md
templates/frontend-only/frontend/: README.md
(+10 files in other folders)
