[project]
name = "app-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the frontend-fastapi harness template"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
